@@ -1,3 +1,12 @@
+Thu Jun 24 19:01:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDSDataReaderListener_T.cpp:
+          Removed all code for possible other DDS vendors, integrating more
+          vendors should be done using C++ template specialization instead
+          of hacking it into the methods for RTI DDS. This is now possible
+          because the core library is now a big C++ templated library, for
+          each vendor we can define a C++ template specialization
+
 Thu Jun 24 18:57:22 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
